--- a/data/events.yml
+++ b/data/events.yml
@@ -4,6 +4,8 @@
 #
 "1993-04-28":
     - headline: "🐣 I was born"
-      description: "I entered the world at around 9am in Brooklyn, New York, USA, the youngest of 4 by far, a happy accident. Thanks, Mom. Dad came to the hospital in a jacket and tie to meet me for the first time."
-      based: "Brooklyn"
+      description: "Thanks to my mom and dad for giving me birth"
+      based: "Mangalore,India"
       doing: "I was tiny"
+"1993-06-07":
+    - headline: "🐣 Started my professional career as a Software Engineer"
