--- a/data/events.yml
+++ b/data/events.yml
@@ -116,3 +116,16 @@
 
 # "2025-02-22":
 #     - headline: "🌎 The Day I created this website"
+
+"2025-02-23":
+    - headline: "📚 Quantum Computing Explained for Beginners"
+      description: "Completed reading this book. Learned a lot about quantum computing space. worth reading. I highly recommend if you're new to this space."
+
+"2025-03-01":
+    - headline: "💪🏽 My First CrossFit Open"
+      description: "CrossFit Open 25.1 - Completed with 6+ rounds ( Rx ) "
+
+"2025-03-08":
+    - headline: "💪🏽 CrossFit Open 25.2 "
+      description: "Scaled version (-13)"      
+
