--- a/data/events.yml
+++ b/data/events.yml
@@ -129,3 +129,6 @@
     - headline: "💪🏽 CrossFit Open 25.2 "
       description: "Scaled version (-13)"      
 
+"2025-03-24":
+    - headline: "🤸🏽‍♂️ First Muscle up "
+      description: "Unlocked my first kipping bar muscle up"   
