--- a/data/events.yml
+++ b/data/events.yml
@@ -118,7 +118,7 @@
 #     - headline: "🌎 The Day I created this website"
 
 "2025-02-23":
-    - headline: "📚 Quantum Computing Explained for Beginners"
+    - headline: "📚 Quantum Computing Explained for Beginners ✅ "
       description: "Completed reading this book. Learned a lot about quantum computing space. worth reading. I highly recommend if you're new to this space."
 
 "2025-03-01":
@@ -127,7 +127,11 @@
 
 "2025-03-08":
     - headline: "💪🏽 CrossFit Open 25.2 "
-      description: "Scaled version (-13)"      
+      description: "Scaled version (-13)"     
+      
+"2025-03-24":
+    - headline: "📚 Why We Sleep ✅ "
+      description: "You can read my review here https://nishanshetty.substack.com/p/a-book-review-why-we-sleep-by-matthew"  
 
 "2025-03-24":
     - headline: "🤸🏽‍♂️ First Muscle up "
