--- a/data/events.yml
+++ b/data/events.yml
@@ -128,11 +128,15 @@
 "2025-03-08":
     - headline: "💪🏽 CrossFit Open 25.2 "
       description: "Scaled version (-13)"     
-      
-"2025-03-24":
-    - headline: "📚 Why We Sleep ✅ "
+
+"2025-03-15":
+    - headline: "💪🏽 CrossFit Open 25.3 "
+      description: "Scaled version" 
+
+"2025-03-23":
+    - headline: "📚 Why We Sleep ✅"
       description: "You can read my review here https://nishanshetty.substack.com/p/a-book-review-why-we-sleep-by-matthew"  
 
 "2025-03-24":
-    - headline: "🤸🏽‍♂️ First Muscle up "
+    - headline: "🤸🏽‍♂️ First Muscle up"
       description: "Unlocked my first kipping bar muscle up"   
