--- a/data/events.yml
+++ b/data/events.yml
@@ -114,6 +114,22 @@
 "2024-11-02":
     - headline: "🏃🏽‍♂️ 1st Trail Running(27K)"
 
+"2025-12-29":
+    - headline: "📚 The Most Important Thing: Uncommon Sense for the Thoughtful Investor ✅"
+      description: "I highly recommend this book if you're an investor" 
+
+"2025-01-12":
+    - headline: "📚 Cosmos ✅"
+      description: "Read my review here https://nishanshetty.substack.com/p/a-book-review-cosmos" 
+
+"2025-01-19":
+    - headline: "📚 The Start-up of You ✅"
+      description: "Good one. I'll write a review on this book soon" 
+
+"2025-02-06":
+    - headline: "📚 How to Talk to Anyone ✅"
+      description: "But thing is I still struggle"  
+
 # "2025-02-22":
 #     - headline: "🌎 The Day I created this website"
 
