--- a/data/events.yml
+++ b/data/events.yml
@@ -87,6 +87,10 @@
     - headline: "📚 Started reading books"
       description: "Book was The Secret"
 
+"2022-03-31":
+    - headline: "📚	Deep Work ✅"
+      description: "Good one"
+      
 "2022-07-12":
     - headline: "💰 1st direct investment in USA"
       description: "Bought google stock"
