--- a/data/events.yml
+++ b/data/events.yml
@@ -118,9 +118,9 @@
 "2024-11-02":
     - headline: "🏃🏽‍♂️ 1st Trail Running(27K)"
 
-"2025-12-29":
-    - headline: "📚 The Most Important Thing: Uncommon Sense for the Thoughtful Investor ✅"
-      description: "I highly recommend this book if you're an investor" 
+"2024-12-29":
+    - headline: "📚 The Most Important Thing ✅"
+      description: "The Most Important Thing : Uncommon Sense for the Thoughtful Investor. I highly recommend this book if you're an investor" 
 
 "2025-01-12":
     - headline: "📚 Cosmos ✅"
