--- a/data/events.yml
+++ b/data/events.yml
@@ -159,4 +159,12 @@
 
 "2025-03-24":
     - headline: "🤸🏽‍♂️ First Muscle up"
-      description: "Unlocked my first kipping bar muscle up"   
+      description: "Unlocked my first kipping bar muscle up"
+
+"2025-04-07":
+    - headline: "💻 Bought my first MacBook Pro"
+      description: "I was thinking buying a new laptop for a long time. Finally decided to buy MacBook Pro. I'm loving it so far. what prompted me to buy was this quoute 'If you need a machine and don’t buy it, then you will ultimately find that you have paid for it and don’t have it.-Henry Ford'"
+
+"2025-04-11":
+    - headline: "📚 Reminiscences of a Stock Operator ✅"
+      description: "A interesting read. Man, Learned about how trading, speculating, manipulating used to be done in the olden days. Specially in USA stock market"   
