Add new life events: scuba diving refresher, half marathons, book readings, and CrossFit activities

--- a/data/events.yml
+++ b/data/events.yml
@@ -168,3 +168,19 @@
 "2025-04-11":
     - headline: "📚 Reminiscences of a Stock Operator ✅"
       description: "A interesting read. Man, Learned about how trading, speculating, manipulating used to be done in the olden days. Specially in USA stock market"   
+
+"2025-05-01":
+    - headline: "📚 A Business History of India ✅"
+      description: "A good read. I'll write a review on this book soon"
+
+"2025-05-04":
+    - headline: "🏃🏽‍♂️ 8th Half Marathon"
+      description: "Personal best 1:58:00. Speed was 5:35/km"
+
+"2025-05-29":
+    - headline: "📚 Power and Progress ✅"
+      description: "A good read. I'll write a review on this book soon"
+
+"2025-06-02":
+    - headline: "🤿 Scuba Diving - Refresher"
+      description: "I took a refresher course in scuba diving"
