Add Thai language learning and 8th half marathon events

--- a/data/events.yml
+++ b/data/events.yml
@@ -184,3 +184,11 @@
 "2025-06-02":
     - headline: "🤿 Scuba Diving - Refresher"
       description: "I took a refresher course in scuba diving"
+
+"2025-08-02":
+    - headline: "🇹🇭 Thai Language Learning"
+      description: "Started learning Thai language"
+
+"2025-08-12":
+    - headline: "🏃🏽‍♂️ 8th Half Marathon"
+      description: "Time 2:26:26 Pace 6:56/km"
