Fix typo: 'quoute' -> 'quote' in 2025-04-07 event description

--- a/data/events.yml
+++ b/data/events.yml
@@ -163,7 +163,7 @@
 
 "2025-04-07":
     - headline: "💻 Bought my first MacBook Pro"
-      description: "I was thinking buying a new laptop for a long time. Finally decided to buy MacBook Pro. I'm loving it so far. what prompted me to buy was this quoute 'If you need a machine and don’t buy it, then you will ultimately find that you have paid for it and don’t have it.-Henry Ford'"
+      description: "I was thinking buying a new laptop for a long time. Finally decided to buy MacBook Pro. I'm loving it so far. what prompted me to buy was this quote 'If you need a machine and don’t buy it, then you will ultimately find that you have paid for it and don’t have it.-Henry Ford'"
 
 "2025-04-11":
     - headline: "📚 Reminiscences of a Stock Operator ✅"
