--- a/data/events.yml
+++ b/data/events.yml
@@ -192,3 +192,12 @@
 "2025-08-12":
     - headline: "🏃🏽‍♂️ 9th Half Marathon"
       description: "Time 2:26:26 Pace 6:56/km"
+
+"2025-09-14":
+    - headline: "🏃🏽‍♂️ 1st CrossFit Competition - RaceOn"
+      description: "We played duo mixed with my gym friend. It's was fun but I think I should have practiced more and taken seriously. I struggled to sync in toe bar with my partner"
+
+"2025-12-05":
+    - headline: "🏃🏽‍♂️ 1st 50k Trail Running"
+      description: "Time 11:53:57 Pace 4.6 KM/H"
+
